:hammer: refactor: modify swagger api file
